Agregar artículo con id de marca y listar id y nombre de marca